# alex4

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  TODO.md  alex4.ini  license.txt  readme.txt
data/: a45.h  data.h  data_files.h  intro.map  intro.txt  make_header.py  outro.map  outro.txt
data/maps/: 01_level1.map  02_level2.map  04_level4.map
data/music/: GAME.MOD
data/scripts/: intro.txt  outro.txt
ext/iniparser/: iniparser.c
maps/: guardian1.map  guardian2.map  level03.map  level05.map  level06.map  level07.map  level08.map  level09.map  level10.map
src/: Makefile  actor.c  actor.h  alex4.h  bullet.c  bullet.h  control.c  control.h  data.c  data.h  edit.c  edit.h  fixed_math.c  fixed_math.h  hisc.c  hisc.h  main.c  main.h  map.c  map.h  misc.c  misc.h  options.c  options.h  particle.c  particle.h  player.c  player.h  port.h  resource.h  script.c  script.h  scroller.c  scroller.h  sdl_port.c  sdl_port.h  shooter.c  shooter.h  sound.c  sound.h  (+6 more)
src/sdl/: port.c  port.h  sound.c
